# Simulation_ENV

./: .gitignore  Makefile  README.md  Thesis.sh  packages-List.txt
src/: CMakeLists.txt  Readme
src/car_demo/bolt_description/: CMakeLists.txt  package.xml
src/car_demo/bolt_description/urdf/: Readme  bolt-resize.urdf  bolt.urdf  prius.urdf
src/car_demo/car_demo/: CMakeLists.txt  package.xml
src/car_demo/car_demo/launch/: bolt.launch  simcity.launch
src/car_demo/car_demo/models/speed_15/: model.sdf
src/car_demo/car_demo/models/speed_20/: model.sdf
src/car_demo/car_demo/models/speed_25/: model.sdf
src/car_demo/car_demo/nodes/: Readme  Steering_wheel.sh  joystick_translator_joystick  joystick_translator_simulator
src/car_demo/car_demo/plugins/: PriusHybridPlugin.cc  PriusHybridPlugin.hh
src/car_demo/car_demo/rviz/: Config.rviz
src/car_demo/car_demo/worlds/: Readme  Simcity_moving_objects.world  actor_collisions_example.world  mcity.world  ped_walk_example.world  simple_city.world
src/car_demo/mirvehicle_msgs/: CMakeLists.txt  Readme  package.xml
src/gazebo_radar_plugin/: CMakeLists.txt
src/gazebo_radar_plugin/msg/: ModeCRadar.msg
src/gazebo_radar_plugin/src/: ModeCRadarPlugin.cc
src/lidar_camera_calibration/config/: bag-config.json  lidar_image_calibration_data (another copy).json  lidar_image_calibration_data.json  lidar_image_calibration_data1.json  trans
src/lidar_camera_calibration/scripts/: Readme  bag_run.py  get_image_points.py  lidar3D_camera2D_points.py  lidar_image.py  main.py  map.py
src/lidar_camera_calibration/scripts/clustering/: clustering.py  pcl_helper.py
src/lidar_camera_calibration/scripts/helpers_visual/: lidar_distace.py  marker.py  point_cloud.py  point_cloud_publish.py
src/velo2cam_gazebo/: README.md
src/velo2cam_gazebo/gazebo_models/velodyne_HDL32/: model.sdf
src/velo2cam_gazebo/gazebo_models/velodyne_HDL64/: model.sdf
src/velo2cam_gazebo/gazebo_plugins/velodyne_gazebo_plugin/include/: GazeboRosVelodyneLaser.h
src/velo2cam_gazebo/gazebo_plugins/velodyne_gazebo_plugin/src/: GazeboRosVelodyneLaser.cpp
src/velo2cam_gazebo/velo2cam_gazebo/launch/vlp16/velo2cam/realistic/: real_stereoVLP16_trans.launch
src/velo2cam_gazebo/velo2cam_gazebo/worlds/vlp16/realistic/: testing.world  trans.world
